--- a/_posts/2024-08-26-mcmc.md
+++ b/_posts/2024-08-26-mcmc.md
@@ -49,21 +49,23 @@ The project can be divided into three parts:
 
 - Both the non-adaptive GGX-VNDF, PSS MCMC and the adaptive MCMC method are able to express rough materials well. From top to bottom are rendered images of ground truth, VNDF and PSS-normalizing flows
 
-  <img src="_assets/_images/mc/gt_ibiza.png" alt="gt_ibiza" style="zoom:33%;" />
+  
 
-  <img src="_assets/_images/mc/pss_ibiza.png" alt="pss_ibiza" style="zoom:33%;" />
+  ![gt_ibiza](../_assets/_images/mc/gt_ibiza.png)
 
-  <img src="_assets/_images/mc/nf_ibiza.png" alt="nf_ibiza" style="zoom:33%;" />
+  ![pss_ibiza](../_assets/_images/mc/pss_ibiza.png)
+
+  ![nf_ibiza](../_assets/_images/mc/nf_ibiza.png)
 
  - The only adaptive method is the normalizing flows. The normalizing flows shows a better convergence in BRDF integration test and a higher & growing acceptance rate during acquisition experiment. It also generate desired sample distribution.
 
-   <img src="_assets/_images/mc/convergence.png" alt="gt_ibiza" style="zoom:67%;" />
+   ![convergence](../_assets/_images/mc/convergence.png)
 
-   <img src="_assets/_images/mc/distribution_NF.png" alt="gt_ibiza" style="zoom:67%;" />
+   ![samples](../_assets/_images/mc/distribution_NF.png)
 
    - For glossy material, none of the methods does well. Because of the lack of a good pdf and interpolation method, all non-adaptive have large amount of noises. The normalizing flows perform better in this case. The first image is ground truth and the second image is the normalizing flow BRDF.
 
-     <img src="_assets/_images/mc/gt_chm.png" alt="gt_chm" style="zoom:50%;" /><img src="_assets/_images/mc/nf_chm_success.png" alt="nf_chm_success" style="zoom:50%;" />
+     ![gt_chm](../_assets/_images/mc/gt_chm.png)![nf_chm_success](../_assets/_images/mc/nf_chm_success.png)
 
 ​		
 
