--- a/_posts/2024-08-26-mcmc.md
+++ b/_posts/2024-08-26-mcmc.md
@@ -51,21 +51,21 @@ The project can be divided into three parts:
 
   
 
-  ![gt_ibiza](../_assets/_images/mc/gt_ibiza.png)
+  ![gt_ibiza](/assets/images/mc/gt_ibiza.png)
 
-  ![pss_ibiza](../_assets/_images/mc/pss_ibiza.png)
+  ![pss_ibiza](/assets/images/mc/pss_ibiza.png)
 
-  ![nf_ibiza](../_assets/_images/mc/nf_ibiza.png)
+  ![nf_ibiza](/assets/images/mc/nf_ibiza.png)
 
  - The only adaptive method is the normalizing flows. The normalizing flows shows a better convergence in BRDF integration test and a higher & growing acceptance rate during acquisition experiment. It also generate desired sample distribution.
 
-   ![convergence](../_assets/_images/mc/convergence.png)
+   ![convergence](/assets/images/mc/convergence.png)
 
-   ![samples](../_assets/_images/mc/distribution_NF.png)
+   ![samples](/assets/images/mc/distribution_NF.png)
 
    - For glossy material, none of the methods does well. Because of the lack of a good pdf and interpolation method, all non-adaptive have large amount of noises. The normalizing flows perform better in this case. The first image is ground truth and the second image is the normalizing flow BRDF.
 
-     ![gt_chm](../_assets/_images/mc/gt_chm.png)![nf_chm_success](../_assets/_images/mc/nf_chm_success.png)
+     ![gt_chm](/assets/images/mc/gt_chm.png)![nf_chm_success](/assets/images/mc/nf_chm_success.png)
 
 ​		
 
